퍼즐 조각들을 게임판 밖에 배치함

--- a/picture_puzzle_game/style.css
+++ b/picture_puzzle_game/style.css
@@ -154,7 +154,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    overflow: visible;
 }
 
 /* 모바일에서 세로 공간 확보 */
